// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo/Details Long Details smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis nisl eget turpis congue molestie. Nulla vitae purus nec augue accumsan facilisis sed sed ligula. Vestibulum sed risus lacinia risus lacinia molestie. Ut lorem quam, consequat eget tempus in, rhoncus vel nunc. Duis efficitur a leo vel sodales. Nam id fermentum lacus. Etiam nec placerat velit. Praesent ac consectetur est. Aenean iaculis commodo enim.
 Lorem ipsum dolor sit amet, con...
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details Long and No Spaces smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    LoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsumLoremipsum
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Description smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <div>
  </div>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Git Server smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Maintainers or Relays smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <div>
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Maintainers smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Name or Description smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <div>
  </div>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Relays smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <div>
    </div>
  </div>
</div>
`;

exports[`Repo/Details No Tags smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="bob"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          bob
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details One Maintainer's Profile Has No displayName or Name smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8 bg-neutral">
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          npub18669...
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details One Maintainer's Profile Not Loaded smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8 skeleton">
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          <div class="skeleton w-24 h-4">
          </div>
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details One Maintainer's Profile Only Has displayName But No Name smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <h4>
      maintainers
    </h4>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="carole"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          carole
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="DanConwayDev"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          DanConwayDev
        </div>
      </div>
    </div>
    <div>
      <div class="my-2 text-md flex items-center">
        <div class="avatar flex-none">
          <div class="rounded h-8 w-8">
            <img class="my-0"
                 src="../test-profile-image.jpg"
                 alt="steve"
            >
          </div>
        </div>
        <div class="pl-3 flex-auto m-auto">
          steve
        </div>
      </div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details Short Details smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <h4>
    description
  </h4>
  <p class="my-2 break-words text-sm">
    short description
  </p>
  <div>
    <div class="badge badge-secondary mr-2">
      svelte
    </div>
    <div class="badge badge-secondary mr-2">
      nostr
    </div>
    <div class="badge badge-secondary mr-2">
      code-collaboration
    </div>
    <div class="badge badge-secondary mr-2">
      git
    </div>
  </div>
  <div>
    <h4>
      git server
    </h4>
    <a href="github.com/example/example"
       target="_blank"
       class="link link-primary my-2 break-words"
    >
      github.com/example/example
    </a>
  </div>
  <div>
    <div>
    </div>
  </div>
  <div>
    <h4>
      relays
    </h4>
    <div class="badge badge-secondary my-2 block">
      relay.damus.io
    </div>
    <div class="badge badge-secondary my-2 block">
      relay.snort.social
    </div>
    <div class="badge badge-secondary my-2 block">
      relayable.org
    </div>
  </div>
</div>
`;

exports[`Repo/Details loading smoke-test 1`] = `
<div class="prose w-full max-w-md">
  <div class="skeleton my-3 h-5 w-20">
  </div>
  <div class="skeleton my-2 h-4">
  </div>
  <div class="skeleton my-2 mb-3 h-4 w-2/3">
  </div>
  <div>
    <div class="badge skeleton w-20">
    </div>
    <div class="badge skeleton w-20">
    </div>
  </div>
  <div>
    <div class="skeleton my-3 h-5 w-20">
    </div>
    <div class="badge skeleton my-2 block w-60">
    </div>
  </div>
  <div>
    <div class="skeleton my-3 h-5 w-20">
    </div>
    <div class="badge skeleton my-2 block w-60">
    </div>
    <div class="badge skeleton my-2 block w-40">
    </div>
  </div>
  <div>
    <div class="skeleton my-3 h-5 w-20">
    </div>
    <div class="badge skeleton my-2 block w-60">
    </div>
    <div class="badge skeleton my-2 block w-40">
    </div>
  </div>
</div>
`;
